// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration test FleetProvision 1`] = `
Object {
  "Parameters": Object {
    "AssetParametersdb6d40de5de28933ebd32c7dfc1c45656f0c04d0ef0a8b00ad5380c0aa4c700bArtifactHash9A67F137": Object {
      "Description": "Artifact hash for asset \\"db6d40de5de28933ebd32c7dfc1c45656f0c04d0ef0a8b00ad5380c0aa4c700b\\"",
      "Type": "String",
    },
    "AssetParametersdb6d40de5de28933ebd32c7dfc1c45656f0c04d0ef0a8b00ad5380c0aa4c700bS3BucketAB9CC84B": Object {
      "Description": "S3 bucket for asset \\"db6d40de5de28933ebd32c7dfc1c45656f0c04d0ef0a8b00ad5380c0aa4c700b\\"",
      "Type": "String",
    },
    "AssetParametersdb6d40de5de28933ebd32c7dfc1c45656f0c04d0ef0a8b00ad5380c0aa4c700bS3VersionKeyC2D6A43B": Object {
      "Description": "S3 key for asset version \\"db6d40de5de28933ebd32c7dfc1c45656f0c04d0ef0a8b00ad5380c0aa4c700b\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "testcaseFleetGeneratortestcase12A380D3": Object {
      "DependsOn": Array [
        "testcaseFleetGeneratortestcaseServiceRoleDefaultPolicy66DAC61D",
        "testcaseFleetGeneratortestcaseServiceRoleF1235FE0",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersdb6d40de5de28933ebd32c7dfc1c45656f0c04d0ef0a8b00ad5380c0aa4c700bS3BucketAB9CC84B",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersdb6d40de5de28933ebd32c7dfc1c45656f0c04d0ef0a8b00ad5380c0aa4c700bS3VersionKeyC2D6A43B",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersdb6d40de5de28933ebd32c7dfc1c45656f0c04d0ef0a8b00ad5380c0aa4c700bS3VersionKeyC2D6A43B",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
            "BUCKET_NAME": Object {
              "Fn::ImportValue": "another-stack:ExportsOutputRefuserProvidedBucket2349EF2D343936C6",
            },
            "BUCKET_PREFIX": "test",
            "FLEET_PROVISIONING_ROLE_ARN": Object {
              "Fn::GetAtt": Array [
                "testcaseProvisionRoleFleetProvisioningRoletestcase678B85F8",
                "Arn",
              ],
            },
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "testcaseFleetGeneratortestcaseServiceRoleF1235FE0",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testcaseFleetGeneratortestcase5505B899": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "iam:PassRole",
                "iam:CreatePolicy",
                "iam:CreateRole",
                "iam:TagRole",
                "iot:CreateProvisioningTemplate",
                "iot:CreatePolicy",
                "iot:CreateKeysAndCertificate",
                "iot:AttachPolicy",
                "iot:CreateRoleAlias",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testcaseFleetGeneratortestcase5505B899",
        "Roles": Array [
          Object {
            "Ref": "testcaseFleetGeneratortestcaseServiceRoleF1235FE0",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "testcaseFleetGeneratortestcaseServiceRoleDefaultPolicy66DAC61D": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::ImportValue": "another-stack:ExportsOutputFnGetAttuserProvidedBucket2349EF2DArnA89CCA27",
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::ImportValue": "another-stack:ExportsOutputFnGetAttuserProvidedBucket2349EF2DArnA89CCA27",
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testcaseFleetGeneratortestcaseServiceRoleDefaultPolicy66DAC61D",
        "Roles": Array [
          Object {
            "Ref": "testcaseFleetGeneratortestcaseServiceRoleF1235FE0",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "testcaseFleetGeneratortestcaseServiceRoleF1235FE0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "testcaseProvisionRoleFleetProvisioningRoletestcase678B85F8": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "iot.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSIoTThingsRegistration",
              ],
            ],
          },
        ],
        "RoleName": "ProvisionRoleName-FleetProvisioningRole-test-case",
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`Integration test FleetProvision in Greengrass V2 mode 1`] = `
Object {
  "Parameters": Object {
    "AssetParametersdb6d40de5de28933ebd32c7dfc1c45656f0c04d0ef0a8b00ad5380c0aa4c700bArtifactHash9A67F137": Object {
      "Description": "Artifact hash for asset \\"db6d40de5de28933ebd32c7dfc1c45656f0c04d0ef0a8b00ad5380c0aa4c700b\\"",
      "Type": "String",
    },
    "AssetParametersdb6d40de5de28933ebd32c7dfc1c45656f0c04d0ef0a8b00ad5380c0aa4c700bS3BucketAB9CC84B": Object {
      "Description": "S3 bucket for asset \\"db6d40de5de28933ebd32c7dfc1c45656f0c04d0ef0a8b00ad5380c0aa4c700b\\"",
      "Type": "String",
    },
    "AssetParametersdb6d40de5de28933ebd32c7dfc1c45656f0c04d0ef0a8b00ad5380c0aa4c700bS3VersionKeyC2D6A43B": Object {
      "Description": "S3 key for asset version \\"db6d40de5de28933ebd32c7dfc1c45656f0c04d0ef0a8b00ad5380c0aa4c700b\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "testcaseFleetGeneratortestcase12A380D3": Object {
      "DependsOn": Array [
        "testcaseFleetGeneratortestcaseServiceRoleDefaultPolicy66DAC61D",
        "testcaseFleetGeneratortestcaseServiceRoleF1235FE0",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersdb6d40de5de28933ebd32c7dfc1c45656f0c04d0ef0a8b00ad5380c0aa4c700bS3BucketAB9CC84B",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersdb6d40de5de28933ebd32c7dfc1c45656f0c04d0ef0a8b00ad5380c0aa4c700bS3VersionKeyC2D6A43B",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersdb6d40de5de28933ebd32c7dfc1c45656f0c04d0ef0a8b00ad5380c0aa4c700bS3VersionKeyC2D6A43B",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
            "BUCKET_NAME": Object {
              "Fn::ImportValue": "another-stack:ExportsOutputRefuserProvidedBucket2349EF2D343936C6",
            },
            "BUCKET_PREFIX": "test",
            "ENABLE_GREENGRASS_V2_MODE": "true",
            "FLEET_PROVISIONING_ROLE_ARN": Object {
              "Fn::GetAtt": Array [
                "testcaseProvisionRoleFleetProvisioningRoletestcase678B85F8",
                "Arn",
              ],
            },
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "testcaseFleetGeneratortestcaseServiceRoleF1235FE0",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testcaseFleetGeneratortestcase5505B899": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "iam:PassRole",
                "iam:CreatePolicy",
                "iam:CreateRole",
                "iam:TagRole",
                "iot:CreateProvisioningTemplate",
                "iot:CreatePolicy",
                "iot:CreateKeysAndCertificate",
                "iot:AttachPolicy",
                "iot:CreateRoleAlias",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testcaseFleetGeneratortestcase5505B899",
        "Roles": Array [
          Object {
            "Ref": "testcaseFleetGeneratortestcaseServiceRoleF1235FE0",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "testcaseFleetGeneratortestcaseServiceRoleDefaultPolicy66DAC61D": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::ImportValue": "another-stack:ExportsOutputFnGetAttuserProvidedBucket2349EF2DArnA89CCA27",
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::ImportValue": "another-stack:ExportsOutputFnGetAttuserProvidedBucket2349EF2DArnA89CCA27",
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testcaseFleetGeneratortestcaseServiceRoleDefaultPolicy66DAC61D",
        "Roles": Array [
          Object {
            "Ref": "testcaseFleetGeneratortestcaseServiceRoleF1235FE0",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "testcaseFleetGeneratortestcaseServiceRoleF1235FE0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "testcaseProvisionRoleFleetProvisioningRoletestcase678B85F8": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "iot.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSIoTThingsRegistration",
              ],
            ],
          },
        ],
        "RoleName": "ProvisionRoleName-FleetProvisioningRole-test-case",
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;
